Init blogserver dev.

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,12 @@
 	<name>oaktree</name>
 	<description>Oaktree Application.</description>
 	<packaging>pom</packaging>
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 
 	<modules>
 		<module>blogserver</module>
+		<module>common</module>
 	</modules>
 </project>
