--- a/blogserver/pom.xml
+++ b/blogserver/pom.xml
@@ -1,29 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent><?xml version="1.0" encoding="UTF-8"?>
 	<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 			 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<modelVersion>4.0.0</modelVersion>
 		<parent>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-parent</artifactId>
-			<version>2.6.1</version>
-			<relativePath/> <!-- lookup parent from repository -->
+			<artifactId>oaktree</artifactId>
+			<groupId>com.jameson.oaktree</groupId>
+			<version>0.0.1-SNAPSHOT</version>
 		</parent>
-		<groupId>com.jameson.oaktree</groupId>
 		<artifactId>blogserver</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<name>blogserver</name>
 		<description>Oaktree blog server.</description>
 		<properties>
-			<java.version>11</java.version>
+			<java.version>1.8</java.version>
 		</properties>
 		<dependencies>
 			<dependency>
@@ -48,35 +37,3 @@
 		</build>
 
 	</project>
-
-	<groupId>com.jameson.oaktree</groupId>
-	<artifactId>blogserver</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>blogserver</name>
-	<description>Oaktree blog server.</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
-</project>
