--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <description>Common object for other module</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -34,6 +37,10 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.55</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
