--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,11 @@
 		<module>blogserver</module>
 		<module>common</module>
 	</modules>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.6.RELEASE</version>
+		<relativePath/>
+	</parent>
 </project>
